--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -9,12 +9,12 @@ permalink: /publications/
 <h1>{{page.title}}</h1>
 
 <h2>Refereed Journal Articles</h2>
-<div class="panel-group" id="accordion">
+<div class="panel-group" id="accordion1">
     <div class="panel panel-default">
 
     {% for publi in site.data.refereed-articles %}
         <div class="panel-heading">
-            <a data-toggle="collapse" data-parent="#accordion"
+            <a data-toggle="collapse" data-parent="#accordion1"
                href="#collapse{{forloop.index}}"
                style="color: inherit;">
             <!-- authors -->
@@ -55,12 +55,12 @@ permalink: /publications/
 </div>
 
 <h2>Preprints, Books (chapter), and Technical Reports</h2>
-<div class="panel-group" id="accordion">
+<div class="panel-group" id="accordion2">
     <div class="panel panel-default">
 
     {% for publi in site.data.preprints-books-reports %}
         <div class="panel-heading">
-            <a data-toggle="collapse" data-parent="#accordion"
+            <a data-toggle="collapse" data-parent="#accordion2"
                href="#collapse{{forloop.index}}"
                style="color: inherit;">
             <!-- authors -->
@@ -101,12 +101,12 @@ permalink: /publications/
 </div>
 
 <h2>Conference Papers</h2>
-<div class="panel-group" id="accordion">
+<div class="panel-group" id="accordion3">
     <div class="panel panel-default">
 
     {% for publi in site.data.conference-papers %}
         <div class="panel-heading">
-            <a data-toggle="collapse" data-parent="#accordion"
+            <a data-toggle="collapse" data-parent="#accordion3"
                href="#collapse{{forloop.index}}"
                style="color: inherit;">
             <!-- authors -->
@@ -147,12 +147,58 @@ permalink: /publications/
 </div>
 
 <h2>Conference Abstracts</h2>
-<div class="panel-group" id="accordion">
+<div class="panel-group" id="accordion4">
     <div class="panel panel-default">
 
     {% for publi in site.data.conference-abstracts %}
         <div class="panel-heading">
-            <a data-toggle="collapse" data-parent="#accordion"
+            <a data-toggle="collapse" data-parent="#accordion4"
+               href="#collapse{{forloop.index}}"
+               style="color: inherit;">
+            <!-- authors -->
+            {% assign authors = "" | split:"/" %}
+            {% for author in publi.author %}
+                {% assign authors = authors | push: author.family %}
+            {% endfor %}
+            {{ authors | array_to_sentence_string }},
+
+            <!-- title with link -->
+            "{{ publi.title }}",
+
+            <!-- container -->
+            <b>{{ publi.container-title }}</b>
+
+            <!-- issued date -->
+            ({{ publi.issued.date-parts | jsonify | slice: 3,4 }}),
+
+            <!-- DOI -->
+            {% if publi.DOI %}
+                <a href="https://doi.org/{{publi.DOI}}">DOI:{{publi.DOI}}</a>
+            {% endif %}
+            </a>
+        </div>
+
+        <div id="collapse{{forloop.index}}" class="panel-collapse collapse">
+            <div class="panel-body">
+                <p>{{ publi.abstract }}</p>
+                <img src="{{ site.url }}{{ site.baseurl }}/images/publication/{{ publi.image }}"
+                    height="150"/>
+
+                <a class="btn btn-outline-primary" href="https://doi.org/{{publi.DOI}}"
+                   role="button" target="blank">Link</a>
+            </div>
+        </div>
+    {% endfor %}
+    </div>
+</div>
+
+<h2>Theses and memoirs</h2>
+<div class="panel-group" id="accordion5">
+    <div class="panel panel-default">
+
+    {% for publi in site.data.conference-abstracts %}
+        <div class="panel-heading">
+            <a data-toggle="collapse" data-parent="#accordion5"
                href="#collapse{{forloop.index}}"
                style="color: inherit;">
             <!-- authors -->
