Do-over publications

--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -150,7 +150,7 @@ permalink: /publications/
 <div class="panel-group" id="accordion4">
     <div class="panel panel-default">
 
-    {% for publi in site.data.conference-abstracts %}
+    {% for publi in site.data.theses-memoirs %}
         <div class="panel-heading">
             <a data-toggle="collapse" data-parent="#accordion4"
                href="#collapse4{{forloop.index}}"
