--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -180,6 +180,7 @@ permalink: /publications/
 
         <div id="collapse4{{forloop.index}}" class="panel-collapse collapse">
             <div class="panel-body">
+                <p>{{ publi.abstract }}</p>
                 <img src="{{ site.url }}{{ site.baseurl }}/images/publication/{{ publi.image }}"
                     height="150"/>
 
