--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -1,7 +1,7 @@
 ---
 title: "Publications"
 layout: default
-excerpt: "RT2 Lab -- Publications."
+excerpt: "MINi Lab -- Publications."
 sitemap: false
 permalink: /publications/
 ---
